- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 3.5.0
- 
    None
- 
    Windows MSVC2015 64bit
- Debug some program using std::[w]string , break
- Values are not shown in local window
std::vector still works; this probably needs checking.
- relates to
- 
                    QTBUG-46344 Support MSVC 2015 -           
- Closed
 
-         
| For Gerrit Dashboard: QTCREATORBUG-15016 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 144456,2 | CdbExt: Fix indices when the predicted number of children... | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |