CdbExt: Fix indices when the predicted number of children...

...differs from the real child count.

Task-number: QTCREATORBUG-15016
Change-Id: Iaadbd6a0de6e1e068b072705e1d1a264ca03a855
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>